Crash by holding shift+Z down in 3D view #36948

Closed
opened 2013-10-04 06:25:27 +02:00 by Shinsuke Irie · 5 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.04 amd64
GeFoece GTX670

- Blender version with error, and version that worked ---

r60540

- Short description of error ---

When holding shift+Z down in 3D view, key repeat of the shift+Z toggles the viewport shading between "Rendered" and "Solid" repeatedly and crashes Blender.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Steps to reproduce:

  1. Start Blender
  2. Move mouse pointer to the 3D view
  3. Hold sfhit+Z down

Such an operation makes no sense, but we can do it accidentally.

Attached backtraces.
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 amd64 GeFoece GTX670 - Blender version with error, and version that worked --- r60540 - Short description of error --- When holding shift+Z down in 3D view, key repeat of the shift+Z toggles the viewport shading between "Rendered" and "Solid" repeatedly and crashes Blender. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Steps to reproduce: 1. Start Blender 2. Move mouse pointer to the 3D view 3. Hold sfhit+Z down Such an operation makes no sense, but we can do it accidentally. Attached backtraces. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Render_engine->text is accessed while already being freed… Here is a patch by Sergey, which kills the render job in addition to freeing the RenderEngine: http://www.pasteall.org/46069/diff

Brecht, do you see any issue with this patch?%%%

%%%Render_engine->text is accessed while already being freed… Here is a patch by Sergey, which kills the render job in addition to freeing the RenderEngine: http://www.pasteall.org/46069/diff Brecht, do you see any issue with this patch?%%%

%%%Fixed by Brecht in r60547, thanks for the report! :)%%%

%%%Fixed by Brecht in r60547, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Committed a fix based on this patch. It wasn't quite correct, it should only stop the job for that region, and it's best to do such updates immediately instead of postponing until draw.%%%

%%%Committed a fix based on this patch. It wasn't quite correct, it should only stop the job for that region, and it's best to do such updates immediately instead of postponing until draw.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36948
No description provided.