Fix #36948: blender internal viewport render crashes holding shift+Z pressed to quickly toggle it on/off.

Problem is accessing freed data, now the job is ended immediately. Fix based
on patch from Sergey and investigation from Bastien.