source/blender/editors/include/ED_render.h
@@ -40,6 +40,7 @@ struct Scene;
 struct ScrArea;
 struct RegionView3D;
 struct RenderEngine;
+struct View3D;
 
 /* render_ops.c */
 
@@ -51,6 +52,7 @@ void ED_render_id_flush_update(struct Main *bmain, struct ID *id);
 void ED_render_engine_changed(struct Main *bmain);
 void ED_render_engine_area_exit(struct ScrArea *sa);
 void ED_render_scene_update(struct Main *bmain, struct Scene *scene, int updated);
+void ED_render_view3d_shade_update(struct Main *bmain, struct View3D *v3d, struct ScrArea *sa);
 
 void ED_viewport_render_kill_jobs(const struct bContext *C, bool free_database);
 
